elasticsearch/ingress-search.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: search-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`search.wgbh-mla.org`)
      services:
        - name: quickstart-kb-http
          port: 5601
  tls:
    passthrough: true
